--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -24,8 +24,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macOS-latest, ubuntu-latest, windows-latest]
-        python-version: ["3.11", "3.12", "3.13"]
+        os: [macOS-latest, ubuntu-latest]
+        python-version: ["3.10"]
 
     steps:
       - uses: actions/checkout@v4
@@ -61,9 +61,13 @@ jobs:
         run: |
           pytest -v --cov=open_mfi --cov-report=xml --color=yes open_mfi/tests/
 
-      - name: CodeCov
+      - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: codebyharjeet/open_mfi
           files: ./coverage.xml
           flags: unittests
           name: codecov-${{ matrix.os }}-py${{ matrix.python-version }}
+
+
