--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,15 +23,20 @@ requires-python = ">=3.8"
 #dependencies = [
 #    "importlib-resources;python_version<'3.10'",
 #]
+dependencies = [
+  "numpy>=1.20",
+  "opt_einsum>=3.3",
+]
 
 # Update the urls once the hosting is set up.
 #[project.urls]
-#"Source" = "https://github.com/<username>/open_mfi/"
+#"Source" = "https://github.com/codebyharjeet/open_mfi/"
 #"Documentation" = "https://open_mfi.readthedocs.io/"
 
 [project.optional-dependencies]
 test = [
   "pytest>=6.1.2",
+  "opt_einsum>=3.3"
 ]
 
 [tool.setuptools]
